internal/fixtures/architecture/negative/esm-extension/packages/sdk/src/bad.ts
import { local } from "./local";

export const value = local;
